--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,3 @@
 # white-whale
 
-初始化项目
+基于Eureka作为服务发现/注册的Spring Cloud项目，目前完成了配置中心 https://github.com/spring-cloud/spring-cloud-config[参考spring-cloud-config]的配置文件动态刷新，其他还在完善中。
